[gd_scene load_steps=2 format=3 uid="uid://beiod4cxn6kp4"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/move_page_item.gd" id="1_ks3sh"]

[node name="MovePageItem" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_ks3sh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NumberLabel" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"

[node name="KeyLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="DownButton" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "^^"

[node name="UpButton" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "v"

[node name="DirectSwapButton" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "o"

[node name="DirectStartedLabel" type="Label" parent="MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(24.635, 0)
layout_mode = 2

[connection signal="pressed" from="MarginContainer2/HBoxContainer/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/DirectSwapButton" to="." method="_on_direct_swap_button_pressed"]
